MESSAGE(STATUS "processing RTToolbox demo apps")

OPTION(BUILD_DemoApp_DoseAcc "Determine if the demo application DoseAcc will be generated." OFF)
IF(BUILD_DemoApp_DoseAcc)
ADD_SUBDIRECTORY(DoseAcc)
ENDIF(BUILD_DemoApp_DoseAcc)

OPTION(BUILD_DemoApp_DoseMap "Determine if the demo application DoseMap will be generated." OFF)
IF(BUILD_DemoApp_DoseMap)
ADD_SUBDIRECTORY(DoseMap)
ENDIF(BUILD_DemoApp_DoseMap)

OPTION(BUILD_DemoApp_DoseTool "Determine if the demo application DoseTool will be generated." OFF)
IF(BUILD_DemoApp_DoseTool)
ADD_SUBDIRECTORY(DoseTool)
ENDIF(BUILD_DemoApp_DoseTool)
OPTION(BUILD_DemoApp_VoxelizerTool "Determine if the demo application VoxelizerTool will be generated." OFF)
IF(BUILD_DemoApp_VoxelizerTool)
ADD_SUBDIRECTORY(VoxelizerTool)
ENDIF(BUILD_DemoApp_VoxelizerTool)

OPTION(BUILD_DemoApp_BioModelCalc "Determine if the demo application BioModelCalc will be generated." OFF)
IF(BUILD_DemoApp_BioModelCalc)
ADD_SUBDIRECTORY(BioModelCalc)
ENDIF(BUILD_DemoApp_BioModelCalc)
